@@ -6,11 +6,14 @@ copyright_year   = 2013
 version          = 0.09
 
 [@Author::Plicease]
-:version       = 1.93
+:version       = 2.21
 release_tests  = 1
 travis_status  = 1
 perl           = 5.008001
 irc            = irc://irc.perl.org/#native
+test2_v0       = 1
+
+[AlienBuild]
 
 [RemovePrereqs]
 ; comes with perl
@@ -29,8 +32,7 @@ remove = Win32
 remove = My::ModuleBuild
 
 [Prereqs]
-HTTP::Tiny = 0
-Archive::Zip = 0
+Alien::Build = 0.99
 
 [Prereqs / BuildRecommends]
 Win32::Shortcut = 0
