@@ -1,2 +1,0 @@
-this directory will be populated during
-the build step.
