@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Use Alien::Build + alienfile for build
+  - Switch from Module::Build (MB) to ExtUtils::MakeMaker (EUMM)
 
 0.09      2017-07-23 00:04:49 -0400
   - Remove dependency on File::HomeDir
